# duckdb-fts

./: CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
extension/fts/: fts_extension.cpp
extension/fts/include/: fts_extension.hpp
test/sql/fts/: deliminator.test
